@@ -1,3 +1,9 @@
+Wed Aug 29 09:26:23 BST 2007  Colin Watson  <cjwatson@debian.org>
+
+	* src/whatis.c (apropos): Add output keys to a hashtable, and skip
+	  any that have already been seen (Debian bug #259338).
+	  (main): Create the hashtable on startup and free it on exit.
+
 Tue Aug 28 19:16:18 BST 2007  Colin Watson  <cjwatson@debian.org>
 
 	* src/man.c (format_display): Wait for the decomp pipeline in the
